Product shop query 4 solution